# Feddy

./: .env.example  .gitignore  LICENSE  README.md  app.py  full_report.txt  fundamentals.py  news_alert.py  portfolio_analysis.py  pyproject.toml  railway_start.py  render.yaml  report.txt  requirements.txt  run_analysis.bat  run_daily_report.bat  run_fundamentals.bat  run_news_alert.bat  run_news_alert_hidden.bat  run_portfolio.bat  run_telegram_bot.bat  send_analysis.py  send_full_report.py  send_fundamentals.py  sent_news.json  startup.sh  technical_analysis.py  telegram_bot.py  test.py
claude_skill/: SKILL.md
claude_skill/references/: architecture.md  data_sources.md
config/: dashboard.example.json  feeds.example.json  portfolio.example.json
config/prompts/: analysis.txt  morning_report.txt  style_reference.md
mcp_server/: server.py
src/marketbrief/: __init__.py  __main__.py  mcp_server.py
src/marketbrief/core/: analysis.py  config.py  pipeline.py  types.py
src/marketbrief/delivery/: base.py  feishu.py  stdout.py  telegram.py
src/marketbrief/fetchers/: base.py  calendar.py  crypto.py  etf_flows.py  fred.py  market.py  news.py
src/marketbrief/utils/: formatting.py  retry.py  timezone.py
workflows/: README.md  morning_report.yml.template
